test/negative/211_for_body_nonvoid.err
211_for_body_nonvoid.fx:3:16: error: improper type of the arithmetic operation result

1 errors occured during type checking.
